--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
+# Node.js
 server/node_modules/
-.env
-
 client/node_modules/
+node_modules/
+
+# Environment files
+.env
+.env.*  # Por si usás múltiples archivos .env (ej: .env.development)
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs (React, etc.)
+client/build/
+client/dist/
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Editor configs
+.vscode/
+.idea/
+
+# Coverage (si usás testing)
+coverage/
+
+# Others
+*.tgz
